make private galeries visisble for admin an dgallery author in top menu

--- a/web/app/ponthe/templates/create_gallery.html
+++ b/web/app/ponthe/templates/create_gallery.html
@@ -43,6 +43,18 @@
                                 </select>
                             </div>
                         </div>
+                        <div class="row margin-bottom-20">
+                            <div class="col-md-6 col-md-offset-0">
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text">
+                                            <input type="checkbox" aria-label="private checkbox" name="private">
+                                            <span>Privée</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <p>
                             <button type="submit" class="btn btn-primary">Ajouter la galerie</button>
                         </p>
