--- a/web/app/ponthe/templates/gallery.html
+++ b/web/app/ponthe/templates/gallery.html
@@ -14,12 +14,26 @@
                     <div class="DashboardContainer"></div>
                     <button id="UppyModalOpenerBtn" class="btn btn-primary margin-vert-20">Ajouter des fichiers</button>
                 </div>
+                {% if current_user.admin or current_user.id == gallery.author_id %}
+                    {% if gallery.private %}
+                        <form class="col-md-2 margin-vert-20" action="" method="post">
+                            <button class="btn btn-warning" type="submit" name="make_gallery_public">Rendre publique</button>
+                        </form>
+                    {% else %}
+                        <form class="col-md-2 margin-vert-20" action="" method="post">
+                            <button class="btn btn-warning" type="submit" name="make_gallery_private">Rendre privée</button>
+                        </form>
+                    {% endif %}
+                {% endif %}
                 {% if current_user.admin %}
                     <div class="col-md-2">
-                        <button class="btn btn-danger margin-vert-20" type="button" data-toggle="modal" data-target="#deleteModal">Supprimer la galerie</button>
+                        <button class="btn btn-warning margin-vert-20" type="button"onclick="toggleModeration()">Modérer</button>
                     </div>
                     <div class="col-md-2">
-                        <button class="btn btn-warning margin-vert-20" type="button" data-toggle="modal" onclick="toggleModeration()">Modérer</button>
+                        <button class="btn btn-danger margin-vert-20 moderation" style="display:none;" type="button" data-toggle="modal" data-target="#deleteModal">Supprimer la galerie</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button class="btn btn-warning margin-vert-20 moderation" style="display:none;" type="button" onclick="hideConfirmedPhotos()">Masquer les photos approuvées</button>
                     </div>
                 {% endif %}
             </div>
@@ -53,7 +67,7 @@
         <div class="row">
             <div class="col-md-12 portfolio-group no-padding">
                 {% for file in gallery.files %}
-                    <div class="col-md-3 portfolio-item margin-bottom-40 design">
+                    <div class="col-md-3 portfolio-item margin-bottom-40 design {% if not file.pending %}confirmed-file{% endif %}">
                         <div>
                             <figure>
                                 <a href="{{ url_for('uploads', file_path=file.file_path) }}">
@@ -62,8 +76,15 @@
                             </figure>
                         </div>
                         {% if current_user.admin %}
-                            <div>
-                                <button class="btn btn-danger moderation" type="button" data-toggle="modal" data-target="#deleteModal-{{ file.slug }}" style="display: none;">Supprimer</button>
+                            <div class="row">
+                                <div class="col-md-{% if file.pending %}6{% else %}12{% endif %}">
+                                    <button class="btn btn-danger moderation" type="button" data-toggle="modal" data-target="#deleteModal-{{ file.slug }}" style="display: none;">Supprimer</button>
+                                </div>
+                                {% if file.pending %}
+                                    <form action="" method="post" class="col-md-6">
+                                        <button class="btn btn-success moderation" type="submit" style="display: none;" name="approve_file" value="{{ file.slug }}">Approuver</button>
+                                    </form>
+                                {% endif %}
                             </div>
                             <div class="modal fade" id="deleteModal-{{ file.slug }}" tabindex="-1" role="dialog" aria-labelledby="FileDeletion" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
@@ -142,7 +163,7 @@
         function toggleModeration() {
             document.moderation = !document.moderation;
 
-            moderatedElements = document.getElementsByClassName('moderation');
+            var moderatedElements = document.getElementsByClassName('moderation');
             if (document.moderation) {
                 for (i = 0; i < moderatedElements.length; i++) {
                     moderatedElements[i].style.display = "inline-block";
@@ -150,6 +171,23 @@
             } else {
                 for (i = 0; i < moderatedElements.length; i++) {
                     moderatedElements[i].style.display = "none";
+                }
+            }
+        }
+
+        document.hideConfirmed = false;
+
+        function hideConfirmedPhotos() {
+            document.hideConfirmed = !document.hideConfirmed;
+
+            var confirmedFiles = document.getElementsByClassName('confirmed-file');
+            if (document.hideConfirmed) {
+                for (i = 0; i < confirmedFiles.length; i++) {
+                    confirmedFiles[i].style.display = "none";
+                }
+            } else {
+                for (i = 0; i < confirmedFiles.length; i++) {
+                    confirmedFiles[i].style.display = "inline-block";
                 }
             }
         }
