validate email address on registering, require promotion on registering, fix school address in cgu typo

--- a/web/app/ponthe/templates/cgu.html
+++ b/web/app/ponthe/templates/cgu.html
@@ -21,7 +21,7 @@
 
                 <h2>ARTICLE 2 : Mentions légales</h2>
                 <p>
-                    L'édition du site Galeries Ponthé est assurée par le club d'audiovisuel Ponthé de l'association déclarée Union Elèves de l'ENPC dont le siège social est situé au 9 Avenue Blaise Pascal, 77420, Champs-Sur-Marne.
+                    L'édition du site Galeries Ponthé est assurée par le club d'audiovisuel Ponthé de l'association déclarée Union Elèves de l'ENPC dont le siège social est situé au 6-8 Avenue Blaise Pascal, 77420, Champs-Sur-Marne.
                     Le Directeur de la publication est Monsieur CHABAL Thomas, président du club d'audiovisuel Ponthé.
                     L'hébergeur du site Galeries Ponthé est la Société OVH France SASU au capital de 10 174 560,00 € dont le siège social est situé au 2 Rue Kellermann, 59100, ROUBAIX.
                 </p>
