--- a/web/app/ponthe/templates/members.html
+++ b/web/app/ponthe/templates/members.html
@@ -10,7 +10,7 @@
                 <!-- Person Details -->
                 <div class="col-md-3 col-sm-4 person-details margin-bottom-30">
                     <figure>
-                        <img src="/assets/the_team/020.png" alt="Photo 020">
+                        <img src="/assets/img/the_team/020.png" alt="Photo 020">
                         <figcaption>
                             <h3 class="margin-bottom-10">Ponthé 020</h3>
                             <p>
